--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 @import url("https://fonts.googleapis.com/css?family=Questrial");
+@import url('https://fonts.googleapis.com/css2?family=Tiro+Devanagari+Hindi&display=swap');
 
 body {
   margin: 0%;
@@ -164,7 +165,7 @@ body {
 }
 
 #blog p {
-  font-size: 17px;
+  font-size: 18px;
   line-height: 25px;
   word-spacing: 1.2px;
   margin: 5vh 0px;
@@ -392,7 +393,7 @@ body {
 #blogs section {
   width: 100%;
   display: inline-block;
-  border-radius: 5px;
+  border-radius: var(--round-none);
   color: var(--text-color);
   border: 1px solid rgb(0, 0, 0, 0.04);
   box-shadow: 0px 0px 0px rgb(0, 0, 0, 0);
@@ -414,8 +415,8 @@ body {
 #blogs section:hover {
   cursor: pointer;
   border: 1px solid rgb(0, 0, 0, 0);
+  border-bottom: 5px solid var(--accent-color);
   box-shadow: 0px 15px 35px rgb(0, 0, 0, 0.06);
-  transform: scale(1.03);
 }
 
 .go_back {
@@ -558,11 +559,11 @@ body {
   --background-image: linear-gradient(90deg,
       rgba(10, 10, 10, 0.3),
       rgb(10, 10, 10, 1)),
-    url("https://images.unsplash.com/photo-1553748024-d1b27fb3f960?w=1500&q=80");
+    url("./blog/Poems/top_image.png");
   --background-background: linear-gradient(0deg,
       rgba(10, 10, 10, 1),
       rgba(10, 10, 10, 0.6)),
-    url("https://images.unsplash.com/photo-1553748024-d1b27fb3f960?w=1500&q=80") center center fixed;
+    url("./blog/Poems/top_image.png") center center fixed;
   --height: 50vh;
 }
 
@@ -588,15 +589,45 @@ body {
   background: var(--bg-secondary-color);
 }
 
+#blog .hindi {
+  font-family: 'Tiro Devanagari Hindi', serif;
+
+}
+
 @media (max-width: 800px) {
   :root {
     --background-image: linear-gradient(0deg,
         rgba(10, 10, 10, 1),
         rgba(10, 10, 10, 0)),
-      url("https://images.unsplash.com/photo-1553748024-d1b27fb3f960?w=1500&q=80") !important;
+      url("./blog/Poems/top_image.png") !important;
   }
 
   body {
     background: linear-gradient(180deg, rgba(10, 10, 10, 1) 20%, rgba(0, 0, 0, 1) 100%);
   }
+}
+
+/* Style for accordion headings */
+.accordion-heading {
+  cursor: pointer;
+  font-weight: bold;
+  margin: 0;
+  padding: 10px;
+  background-color: transparent;
+  color: var(--text-color);
+  transition: var(--transition-ms) linear;
+
+  &:hover {
+    text-decoration: underline;
+    text-decoration-color: var(--accent-color);
+  }
+}
+
+/* Style for accordion content */
+.accordion-content {
+  display: none;
+  padding: 10px;
+  padding-left: 50px;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
